--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@ body {
 
 /* Navbar styles */
 .navbar {
+  bottom: 70px;
   position: relative;
   display: flex;
   justify-content: center;
@@ -64,8 +65,8 @@ body {
 
 .logo {
   padding: 20px;
-  height: 60px;
-  width: 60px;
+  height: 120px;
+  width: 120px;
   margin-right: 10px;
   display: inline-block;
 }
@@ -140,7 +141,7 @@ body {
 /* Digital Clock Styles */
 .clockContainer {
   position: absolute;
-  top: 10px;
+  top: 20px;
   right: 20px;
   background-color: #000;
   padding: 10px 20px;
@@ -152,7 +153,61 @@ body {
 
 .clockText {
   color: #00ffff;
-  font-family: monospace;
+  font-family: 'Courier New', Courier, monospace;
   font-size: 1.5rem;
   margin: 0;
 }
+
+
+/* Header section start here */
+
+.header{
+  font-size: 30px;
+  font-weight: bold;
+  color: white;
+  padding-left: 20px;
+  display: inline-block;
+  margin-top: 20px;
+  top: 10px;
+}
+
+
+
+
+/* Orb strat here */
+
+
+.orb-container {
+  display: block;
+  position: relative;
+  width: 50%;
+  height: 50%;
+  left: 200px;
+  bottom: 60px;
+  margin: 0 auto;
+  aspect-ratio: 1 / 1; /* Keeps orb square */
+}
+
+element.style {
+  width: 400px;
+  height: 400px;
+}
+.orb-container canvas {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.orb-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: clamp(1.5rem, 5vw, 3rem);
+  font-weight: bold;
+  text-align: center;
+  pointer-events: none;
+}
+
+
