--- a/src/App.css
+++ b/src/App.css
@@ -494,18 +494,24 @@ body {
 @keyframes appear{
   from{
     opacity: 0;
-    transform: translateX(-100px) ;
+    scale: 0.5;
   }
   to{
     opacity: 1;
-    transform: translateX(100px);
+    scale: 1;
   }
 }
 .about-card{
-  animation: appear  linear ; 
+  animation: appear  linear; 
   animation-timeline: view();
-  animation-range: entry 0% cover 40% ;
+  animation-range: entry 0% cover 50%;
 }
+
+
+
+
+
+
 
 
 
