--- a/src/App.css
+++ b/src/App.css
@@ -1359,13 +1359,19 @@ body {
   background: #000;
   color: #fff;
   border: none;
+  box-shadow: 1px 1px 0 white;  
   padding: 14px;
   border-radius: 8px;
   font-weight: bold;
   cursor: pointer;
   transition: 0.3s;
+  width: 170px;
+  justify-content: end;
+  margin-left: 180px;
 }
 
 .contact-form button:hover {
-  background: #333;
+  background: white;
+  color: #000;
+  border: 1px solid black;
 }
